test/errors/python_generator_error/zs/api_clashing/const_with_api_clash_error.zs
package api_clashing.const_with_api_clash_error;

const string API = "api";
